weird layout issue on ios

--- a/stylesheets/study.scss
+++ b/stylesheets/study.scss
@@ -715,6 +715,8 @@ $buttonPadding: 0.5em;
             max-width: 700px;
             padding: 0.5em;
 
+            /* somehow the background color is too dark on chrome for iOS so turn it off. no idea why. */
+            background-color: inherit !important;
             display: flex;
             flex-direction: column;
 
